<resources>
    <string name="app_name">EVMap</string>
    <string name="title_activity_maps">EVMap</string>
    <string name="connectors">Connectors</string>
    <string name="no_maps_app_found">Install a navigation app first</string>
    <string name="no_browser_app_found">Install a web browser first</string>
    <string name="no_email_app_found">Install an email app first</string>
    <string name="no_share_app_found">Could not find an app to share with</string>
    <string name="system_setting_not_supported">Your system does not support this setting</string>
    <string name="address">Address</string>
    <string name="operator">Operator</string>
    <string name="network">Network</string>
    <string name="hours">Opening hours</string>
    <string name="open_247"><![CDATA[<b>Open 24/7</b>]]></string>
    <string name="closed"><![CDATA[<b>Closed</b>]]></string>
    <string name="open_closesat"><![CDATA[<b>Open</b> · Closes at %s]]></string>
    <string name="closed_opensat"><![CDATA[<b>Closed</b> · Opens at %s]]></string>
    <string name="closed_unfmt">Closed</string>
    <string name="holiday">Holiday</string>
    <string name="cost">Cost</string>
    <string name="cost_detail"><![CDATA[<b>Charging:</b> %1$s · <b>Parking:</b> %2$s]]></string>
    <string name="cost_detail_charging"><![CDATA[<b>%s charging</b>]]></string>
    <string name="cost_detail_parking"><![CDATA[<b>%s parking</b>]]></string>
    <string name="charging_free">Free</string>
    <string name="charging_paid">Paid</string>
    <string name="parking_free">Free</string>
    <string name="parking_paid">Paid</string>
    <string name="amenities">Amenities</string>
    <string name="general_info">General info</string>
    <string name="realtime_data_unavailable">Real-time status unavailable</string>
    <string name="realtime_data_login_needed">Tesla account needed for real-time data</string>
    <string name="realtime_data_loading">Checking real-time status…</string>
    <string name="realtime_data_source">Real-time status source (beta): %s</string>
    <string name="source">Source: %s</string>
    <string name="search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_favs">Favorites</string>
    <string name="menu_filter">Filter</string>
    <string name="not_implemented">not implemented yet</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="github_link_title">Source code</string>
    <string name="oss_licenses">Licenses</string>
    <string name="settings">Settings</string>
    <string name="settings_ui">Interface</string>
    <string name="settings_map">Map</string>
    <string name="copyright">Copyright</string>
    <string name="other">Other</string>
    <string name="privacy">Privacy</string>
    <string name="fav_add">Save as favorite</string>
    <string name="fav_remove">Remove from favorites</string>
    <string name="pref_navigate_use_maps">Immediate navigation</string>
    <string name="pref_navigate_use_maps_on">Navigation button starts route guidance with Google Maps</string>
    <string name="pref_navigate_use_maps_off">Navigation button opens the maps app with charger location</string>
    <string name="coordinates">Coordinates</string>
    <string name="share">Share</string>
    <string name="filter_free">Only free chargers</string>
    <string name="filter_min_power">Min power</string>
    <string name="filter_free_parking">Only chargers with free parking</string>
    <string name="filter_min_connectors">Min number of connectors</string>
    <string name="filter_connectors">Connectors</string>
    <string name="plug_type_1">Type 1</string>
    <string name="plug_type_2">Type 2</string>
    <string name="plug_type_2_tethered">Type 2 tethered cable</string>
    <string name="plug_type_3a">Type 3A</string>
    <string name="plug_type_3c">Type 3C</string>
    <string name="plug_ccs">CCS</string>
    <string name="plug_schuko">Schuko</string>
    <string name="plug_chademo">CHAdeMO</string>
    <string name="plug_supercharger">Tesla Supercharger</string>
    <string name="plug_cee_blau">CEE Blue</string>
    <string name="plug_cee_rot">CEE Red</string>
    <string name="plug_roadster_hpc">Tesla Roadster (2008) HPC</string>
    <string name="plug_mcs">MCS</string>
    <string name="all">all</string>
    <string name="none">none</string>
    <string name="show_more">more…</string>
    <string name="show_less">less…</string>
    <string name="favorites_empty_state">Saved chargers show up here</string>
    <string name="donate">Donate</string>
    <string name="donation_successful">Thank you ❤️</string>
    <string name="donation_failed">Something went wrong 😕</string>
    <string name="map_type_normal">Default</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type">Map type</string>
    <string name="map_details">Map details</string>
    <string name="map_traffic">Traffic</string>
    <string name="faq">Frequently asked questions</string>
    <string name="menu_filters_active">Filters active</string>
    <string name="filters_activated">Filters activated</string>
    <string name="filters_deactivated">Filters deactivated</string>
    <string name="menu_edit_filters">Edit filters</string>
    <string name="menu_manage_filter_profiles">Manage filter profiles</string>
    <string name="go_to_chargeprice">Compare prices</string>
    <string name="fault_report">Fault report</string>
    <string name="fault_report_date">Fault report (last update: %s)</string>
    <string name="filter_networks">Networks</string>
    <string name="filter_operators">Operators</string>
    <string name="filter_chargecards">Payment methods</string>
    <string name="all_selected">All selected</string>
    <string name="number_selected">%d selected</string>
    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pref_language">App language</string>
    <string name="pref_darkmode">Dark mode</string>
    <string name="connection_error">Could not load charging stations</string>
    <string name="location_error">Failed to detect location. Please check system settings</string>
    <string name="retry">Retry</string>
    <string name="filter_open_247">Available 24/7</string>
    <string name="filter_barrierfree">Usable without registration</string>
    <string name="filter_exclude_faults">Exclude chargers with reported faults</string>
    <string name="filter_accessibility">Charger accessibility</string>
    <string name="charge_cards">Payment methods</string>
    <string name="and_n_others">and %d others</string>
    <string name="pref_map_provider">Map provider</string>
    <string name="twitter">Twitter</string>
    <string name="mastodon">Mastodon</string>
    <string name="goingelectric_forum">Forum thread at GoingElectric.de</string>
    <string name="tff_forum">Forum thread at TFF-Forum.de</string>
    <string name="contact">Contact</string>
    <string name="menu_report_new_charger">New charger</string>
    <string name="edit_at_datasource">Edit at %s</string>
    <string name="categories">Categories</string>
    <string name="category_car_dealership">Car Dealership</string>
    <string name="category_service_on_motorway">Service area (on motorway)</string>
    <string name="category_service_off_motorway">Service area (off motorway)</string>
    <string name="category_railway_station">Railway station</string>
    <string name="category_public_authorities">Public authorities</string>
    <string name="category_camping">Camping site</string>
    <string name="category_shopping_mall">Shopping mall</string>
    <string name="category_holiday_home">Holiday home</string>
    <string name="category_airport">Airport</string>
    <string name="category_amusement_park">Amusement park</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_cinema">Cinema</string>
    <string name="category_church">Church</string>
    <string name="category_hospital">Hospital</string>
    <string name="category_museum">Museum</string>
    <string name="category_parking_multi">Parking garage</string>
    <string name="category_parking">Car park</string>
    <string name="category_private_charger">Private charger</string>
    <string name="category_rest_area">Rest area</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_swimming_pool">Swimming pool</string>
    <string name="category_supermarket">Supermarket</string>
    <string name="category_petrol_station">Petrol station</string>
    <string name="category_parking_underground">Underground car park</string>
    <string name="category_zoo">Zoo</string>
    <string name="category_caravan_site">Caravan site</string>
    <string name="menu_apply">Apply filters</string>
    <string name="menu_save_profile">Save as profile</string>
    <string name="menu_reset">Reset filter settings</string>
    <string name="no_filters">No filters</string>
    <string name="filter_custom">Modified filter</string>
    <string name="filter_favorites">Favorites</string>
    <string name="reorder">reorder</string>
    <string name="delete">Delete</string>
    <string name="save_as_profile">Save as profile</string>
    <string name="pref_my_vehicle">My vehicles</string>
    <string name="pref_chargeprice_no_base_fee">Exclude plans with monthly fees</string>
    <string name="pref_chargeprice_show_provider_customer_tariffs">Include tie-in plans</string>
    <string name="pref_chargeprice_show_provider_customer_tariffs_summary">Utility companies sometimes offer special plans for their customers</string>
    <string name="close">Close</string>
    <string name="pref_chargeprice_currency">Currency</string>
    <string name="pref_my_tariffs">My charging plans</string>
    <string name="settings_charger_data">Charging stations</string>
    <string name="pref_data_source">Data source</string>
    <string name="data_sources_description">Please pick a data source for charging stations. It can later be changed in the app settings.</string>
    <string name="data_source_goingelectric">GoingElectric.de</string>
    <string name="data_source_openchargemap">Open Charge Map</string>
    <string name="data_source_goingelectric_desc">Great in the German-speaking countries. Descriptions in German. Community-maintained.</string>
    <string name="data_source_openchargemap_desc"><![CDATA[Worldwide, with varying quality. Descriptions in English or the local language. Community-maintained and open government data in some countries (e.g. North America, UK, France, Norway).]]></string>
    <string name="pref_search_provider">Search provider</string>
    <string name="pref_search_delete_recent">Delete recent search results</string>
    <string name="pref_chargeprice_allow_unbalanced_load">Allow unbalanced load</string>
    <string name="pref_chargeprice_allow_unbalanced_load_summary">Allow single-phase AC charging with more than 4.5 kW</string>
    <string name="pref_map_rotate_gestures_enabled">Map rotation</string>
    <string name="pref_map_rotate_gestures_on">Use two fingers to rotate the map</string>
    <string name="pref_map_rotate_gestures_off">Rotation off (north always up)</string>
    <string name="pref_prediction_enabled">Show utilization predictions</string>
    <string name="pref_prediction_enabled_summary">for supported chargers\n(currently only DC in Germany)</string>
    <string name="pref_tesla_account">Tesla account</string>
    <string name="pref_chargeprice_native_integration">Price comparison within EVMap</string>
    <string name="pref_chargeprice_native_integration_on">Pricing data will be shown directly in EVMap</string>
    <string name="pref_chargeprice_native_integration_off">Price comparison button will refer to the Chargeprice app or website</string>
</resources>