<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="chargeprice_native_integration"
        android:title="@string/pref_chargeprice_native_integration"
        android:summaryOn="@string/pref_chargeprice_native_integration_on"
        android:summaryOff="@string/pref_chargeprice_native_integration_off"
        app:defaultValue="true" />
    <net.vonforst.evmap.ui.MultiSelectDialogPreference
        android:key="chargeprice_my_vehicle"
        android:title="@string/pref_my_vehicle"
        app:showAllButton="false"
        app:defaultToAll="false" />
    <net.vonforst.evmap.ui.MultiSelectDialogPreference
        android:key="chargeprice_my_tariffs"
        android:title="@string/pref_my_tariffs" />
    <ListPreference
        android:key="chargeprice_currency"
        android:title="@string/pref_chargeprice_currency"
        android:entryValues="@array/pref_chargeprice_currencies"
        android:defaultValue="EUR"
        app:useSimpleSummaryProvider="true" />
    <CheckBoxPreference
        android:key="chargeprice_no_base_fee"
        android:title="@string/pref_chargeprice_no_base_fee"
        android:defaultValue="false"
        app:singleLineTitle="false" />
    <CheckBoxPreference
        android:key="chargeprice_show_provider_customer_tariffs"
        android:title="@string/pref_chargeprice_show_provider_customer_tariffs"
        android:summary="@string/pref_chargeprice_show_provider_customer_tariffs_summary"
        android:defaultValue="false"
        app:singleLineTitle="false" />
    <CheckBoxPreference
        android:key="chargeprice_allow_unbalanced_load"
        android:title="@string/pref_chargeprice_allow_unbalanced_load"
        android:summary="@string/pref_chargeprice_allow_unbalanced_load_summary"
        android:defaultValue="false"
        app:singleLineTitle="false" />
</PreferenceScreen>