<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioButton
        android:id="@+id/rbGoingElectric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_source_goingelectric"
        android:textColor="#098ac7"
        app:buttonTint="#098ac7"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:text="@string/data_source_goingelectric_desc" />

    <RadioButton
        android:id="@+id/rbOpenChargeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_source_openchargemap"
        android:textColor="#587e25"
        app:buttonTint="#587e25"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:layout_marginStart="32dp"
        android:text="@string/data_source_openchargemap_desc" />

</RadioGroup>